# franka-panda-iprl

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  setup.py  torque_control.py
apps/: CMakeLists.txt
apps/opspace/: CMakeLists.txt
apps/opspace/src/: main.cc
cmake/: Eigen3-CMakeLists.txt.in  FindEigen3.cmake.in  Findcpp_redis.cmake.in  Findyaml-cpp.cmake.in  Franka-CMakeLists.txt.in  FrankaPandaConfig.cmake.in  cpp_redis-CMakeLists.txt.in  ctrl_utils-CMakeLists.txt.in  franka_pandaConfig.cmake.in  pybind11-CMakeLists.txt.in  yaml-cpp-CMakeLists.txt.in
examples/franka-panda-opspace/: CMakeLists.txt
examples/franka-panda-opspace/python/: opspace_control.py
examples/franka-panda-opspace/src/: articulated_body.h  main.cc  python_bindings.cc  spatial_dyn_franka_panda.h
examples/opspace/: CMakeLists.txt
examples/opspace/python/: opspace_control.py
examples/opspace/src/: main.cc
frankapanda/: __init__.py
include/FrankaPanda/: FrankaPanda.h  model.h
include/franka_panda/: articulated_body.h  franka_panda.h  model.h
python/: CMakeLists.txt  __init__.py  realtime_plotter.py  torque_control.py
resources/: default.yaml  franka_panda.urdf  franka_panda_with_articulated_hand.urdf
resources/graphics/: finger.mtl  hand.mtl  link0.mtl  link1.mtl  link2.mtl  link4.mtl  link5.mtl  link6.mtl  link7.mtl
src/: CMakeLists.txt  args.cc  args.h  cartesian_pose_control.cc  control_thread.cc  control_thread.h  controllers.cc  controllers.h  eigen_utils.h  gripper_thread.cc  gripper_thread.h  main.cc  model.cc  redis_client.h  redis_thread.cc  redis_thread.h  shared_memory.h  string_utils.h  timer.h  torque_control.cc
src/python/: CMakeLists.txt  articulated_body.cc  franka_panda.cc
