############################################################
# CMakeLists for Franka Panda apps.
#
# Copyright 2020. All Rights Reserved.
# Stanford IPRL
#
# Created: December 9, 2020
# Authors: Toki Migimatsu
############################################################

message(STATUS "Configuring ${PROJECT_NAME} examples.")

add_subdirectory(opspace)
